--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,7 @@
 body {
   min-width: 360px;
   max-width: 1440px;
-  margin: 0 auto;
+  padding: 56px auto 80px;
   box-sizing: border-box;
   background-color: #f4f4f4;
 
