--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,6 @@
 body {
   min-width: 360px;
   max-width: 1440px;
-  padding: 56px auto 80px;
   box-sizing: border-box;
   background-color: #f4f4f4;
 
@@ -19,6 +18,10 @@ body {
   h2 {
     margin: 0;
     padding: 0;
+  }
+
+  .page {
+    padding-top: 56px;
   }
 
   .card {
@@ -124,7 +127,6 @@ body {
     }
 
     &__button {
-
       &--delete {
         background-color: #f4f4f4;
         inline-size: 100%;
@@ -155,60 +157,59 @@ body {
   }
 
   @media (max-width: 360px) {
-
+    .page {
+      padding: 16px;
+    }
     .card {
       max-inline-size: 328px;
-  
+
       &__item {
         border-radius: 8px;
         padding: 8px;
       }
-  
+
       &__sticker {
         padding: 4px;
         border-radius: 4px;
         inline-size: 60px;
         block-size: 18px;
       }
-  
+
       &__sticker p {
         line-height: 10.4px;
       }
-  
+
       &__image {
         padding: 5px 5px;
       }
-  
+
       &__title {
         block-size: 26px;
         line-height: 13px;
       }
-  
+
       &__description {
         block-size: 32px;
         line-height: 10.4px;
       }
-  
+
       &__price {
         line-height: 20.89px;
         margin-top: 2px;
       }
-  
+
       &__button {
-  
         &--delete {
           block-size: 28px;
           line-height: 11.72px;
         }
-  
+
         &--more {
           inline-size: 100%;
           block-size: 48px;
           line-height: 16.41px;
         }
       }
-      
     }
   }
 }
-
