--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto';
-    src: url(./Roboto-Light.woff2) format('woff2');
+    src: url(../../public/fonts/Roboto-Light.woff2) format('woff2');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: 'Roboto';
-    src: url(./Roboto-Regular.woff2) format('woff2');
+    src: url(../../public/fonts/Roboto-Regular.woff2) format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
   @font-face {
     font-family: 'Roboto';
-    src: url(./Roboto-Medium.woff2) format('woff2');
+    src: url(../../public/fonts/Roboto-Medium.woff2) format('woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
