--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import "normalize.css";
 @import "variables.scss";
+@import "fonts.scss";
 
 body {
   min-width: 360px;
@@ -7,7 +8,7 @@ body {
   box-sizing: border-box;
   background-color: #f4f4f4;
   padding: 16px;
-  
+
   ul,
   button {
     margin: 0;
@@ -20,10 +21,6 @@ body {
     margin: 0;
     padding: 0;
   }
-
-  // .page {
-  //   padding: 56px;
-  // }
 
   .card {
     max-inline-size: 944px;
@@ -142,6 +139,21 @@ body {
         margin-top: 8px;
       }
 
+      // &--delete::before {
+      //   content: "";
+      //   display: inline;
+      //   background-image: src('../../public/images/Vector.png') no-repeat center center;
+      //   width: 100%;
+      //   height: 100%;
+      //   // object-fit: cover;
+
+      // }
+
+      &--delete:hover {
+        background-color: #DF0613;
+        color: #FFFFFF;
+      }
+
       &--more {
         inline-size: 100%;
         block-size: 51px;
@@ -154,13 +166,14 @@ body {
         border-radius: 16px;
         margin-top: 16px;
       }
+
+      &--more:hover {
+        background-color: #005DBA;
+      }
     }
   }
 
   @media (max-width: 360px) {
-    .page {
-      padding: 16px;
-    }
     .card {
       max-inline-size: 328px;
 
