--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,7 @@ body {
     &__list {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: space-around;
       gap: 16px;
     }
 
