media for btn delete added

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -181,12 +181,43 @@ body {
     }
   }
 
+  @media (max-width: 1200px) {
+    .card {
+      &__button {
+        &--delete::before {
+          top: 16.5px;
+          left: 55px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 950px) {
+    .card {
+      &__button {
+        &--delete::before {
+          left: 50px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 700px) {
+    .card {
+      &__button {
+        &--delete::before {
+          left: 41px;
+        }
+      }
+    }
+  }
+
   @media (max-width: 400px) {
     .card {
       &__button {
         &--delete::before {
           top: 17px;
-          left: 34px;
+          left: 33px;
         }
       }
     }
